--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "nodejs-scheduler",
+    "name": "@weedzcokie/scheduler",
     "version": "1.0.0",
     "description": "",
     "type": "module",
