--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
     "name": "@weedzcokie/scheduler",
-    "version": "1.0.4",
+    "version": "1.0.5",
     "description": "",
     "type": "module",
-    "main": "main.js",
+    "main": "dist/main.js",
     "files": [
-        "main.js"
+        "dist/main.js"
     ],
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "build": "tsc",
+        "prepublish": "pnpm run build"
     },
     "keywords": [
         "scheduler"
@@ -22,5 +23,9 @@
     },
     "homepage": "https://github.com/weedz/nodejs-scheduler#readme",
     "author": "Linus Björklund",
-    "license": "MIT"
+    "license": "MIT",
+    "devDependencies": {
+        "@types/node": "^20.11.17",
+        "typescript": "^5.3.3"
+    }
 }
