--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
         "noEmit": false,
         "sourceMap": false,
         "moduleResolution": "NodeNext",
-        "outDir": "dist"
+        "outDir": "dist",
+        "declaration": true
     },
     "include": [
         "./src"
