--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@weedzcokie/scheduler",
-    "version": "1.0.8",
+    "version": "1.0.9",
     "description": "",
     "type": "module",
     "main": "dist/main.js",
@@ -10,7 +10,7 @@
     ],
     "types": "dist/main.d.ts",
     "scripts": {
-        "build": "tsc",
+        "build": "rm -rf ./dist && tsc",
         "prepublish": "pnpm run build"
     },
     "keywords": [
@@ -27,7 +27,7 @@
     "author": "Linus Björklund",
     "license": "MIT",
     "devDependencies": {
-        "@types/node": "^20.11.17",
-        "typescript": "^5.3.3"
+        "@types/node": "^20.11.27",
+        "typescript": "^5.4.2"
     }
 }
